--- a/templates/fun/Stratagem_Hero_Scoreboard.html
+++ b/templates/fun/Stratagem_Hero_Scoreboard.html
@@ -11,7 +11,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Helldivers Mini Game">
-        <meta name="author" content="Hanbyel">
+        <meta name="author" content="Hanplanet">
         <meta name="generator" content="Django">
         <meta name="robots" content="noindex">
         <meta property="og:title" content="Stratagem Hero">
