--- a/templates/none.html
+++ b/templates/none.html
@@ -32,10 +32,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Django">
-    <meta name="author" content="Hanbyel">
+    <meta name="author" content="Hanplanet">
     <meta name="generator" content="Django">
     <meta name="robots" content="noindex">
-    <meta property="og:title" content="www.hanplanet.com">
+    <meta property="og:title" content="Hanplanet">
+    <meta property="og:site_name" content="Hanplanet">
     <meta property="og:description" content="Django">
     <meta property="og:image" content="https://github.com/Adihang/portfolio_with_django/assets/56463432/85411b54-68be-4ece-b21f-b531794020c0">
     {% include "partials/static_script_fallback.html" %}
@@ -45,8 +46,7 @@
     <link rel="stylesheet" type="text/css" href="{% static_v 'css/salvations_edge_style.css' %}">
     <script src="{% static_v 'js/bootstrap.min.js' %}" type="text/javascript" defer onerror="window.__reloadStaticScript(this)"></script>
     <script src="{% static_v 'js/script.js' %}" type="text/javascript" defer onerror="window.__reloadStaticScript(this)"></script>
-    <title>
-        www.hanplanet.com</title>
+    <title>Hanplanet</title>
 </head>
 <body class="maintenance-page">
     <h1>limhan456@naver.com</h1>
