--- a/templates/docs/_auth_button.html
+++ b/templates/docs/_auth_button.html
@@ -1,9 +1,3 @@
-{% if user.is_authenticated %}
-<form method="post" action="{{ docs_logout_url }}" class="docs-auth-form">
-    {% csrf_token %}
-    <input type="hidden" name="next" value="{{ docs_auth_next }}">
-    <button class="docs-btn" type="submit">{{ docs_text.auth_logout_button }}</button>
-</form>
-{% else %}
+{% if not user.is_authenticated %}
 <a class="docs-btn" href="{{ docs_login_url }}?next={{ docs_auth_next|urlencode }}">{{ docs_text.auth_login_button }}</a>
 {% endif %}
