--- a/templates/docs/list.html
+++ b/templates/docs/list.html
@@ -23,6 +23,7 @@
         <div class="docs-toolbar-right">
             {% include "docs/_auth_account.html" %}
             <div class="docs-toolbar-actions">
+                <button class="docs-help-icon-link" type="button" id="docs-page-help-btn" aria-label="{{ docs_text.help_button }}" title="{{ docs_text.help_button }}"><span class="docs-help-icon-symbol" aria-hidden="true"></span></button>
                 {% include "docs/_auth_button.html" %}
                 {% if docs_can_edit %}
                     <a
@@ -40,6 +41,7 @@
     class="docs-shell docs-content"
     data-docs-page="list"
     data-current-dir="{{ current_dir }}"
+    data-current-dir-can-edit="{% if current_dir_can_edit %}1{% else %}0{% endif %}"
     data-docs-base-url="{{ docs_base_url }}"
     data-list-api-url="{{ docs_api_list_url }}"
     data-rename-api-url="{{ docs_api_rename_url }}"
@@ -54,93 +56,18 @@
     <ul id="docs-list" class="docs-list" aria-label="{{ docs_text.list_aria_label }}"></ul>
 </main>
 
-<div id="docs-context-menu" class="docs-context-menu" hidden>
-    <button type="button" data-action="open">{{ docs_text.menu_open }}</button>
-    {% if docs_can_edit or docs_can_manage_acl %}
-        {% if docs_can_edit %}
-        <button type="button" data-action="new-folder">{{ docs_text.menu_new_folder }}</button>
-        <button type="button" data-action="new-doc">{{ docs_text.menu_new_document }}</button>
-        {% endif %}
-        {% if docs_can_manage_acl %}
-        <button type="button" data-action="permissions">{{ docs_text.menu_permissions }}</button>
-        {% endif %}
-        {% if docs_can_edit %}
-        <button type="button" data-action="rename">{{ docs_text.menu_rename }}</button>
-        <button type="button" data-action="edit">{{ docs_text.menu_edit }}</button>
-        <button type="button" data-action="delete">{{ docs_text.menu_delete }}</button>
-        {% endif %}
-    {% endif %}
-</div>
+{% include "popup/docs/context_menu.html" %}
 
-{% if docs_can_edit %}
-    <div id="docs-rename-modal" class="docs-rename-modal" hidden>
-        <div class="docs-rename-modal-backdrop" id="docs-rename-modal-backdrop"></div>
-        <div class="docs-rename-modal-dialog" role="dialog" aria-modal="true" aria-labelledby="docs-rename-title">
-            <h3 id="docs-rename-title" class="docs-rename-title">{{ docs_text.rename_title }}</h3>
-            <div class="docs-rename-target" id="docs-rename-target"></div>
-            <label class="docs-field docs-field-full">
-                <span>{{ docs_text.rename_new_name }}</span>
-                <input type="text" id="docs-rename-input" placeholder="{{ docs_text.rename_new_name_placeholder }}">
-            </label>
-            <div class="docs-rename-actions">
-                <button type="button" class="docs-btn" id="docs-rename-cancel-btn">{{ docs_text.cancel }}</button>
-                <button type="button" class="docs-btn docs-btn-primary" id="docs-rename-confirm-btn">{{ docs_text.apply }}</button>
-            </div>
-        </div>
-    </div>
-
-    <div id="docs-folder-create-modal" class="docs-rename-modal" hidden>
-        <div class="docs-rename-modal-backdrop" id="docs-folder-create-modal-backdrop"></div>
-        <div class="docs-rename-modal-dialog" role="dialog" aria-modal="true" aria-labelledby="docs-folder-create-title">
-            <h3 id="docs-folder-create-title" class="docs-rename-title">{{ docs_text.folder_modal_title }}</h3>
-            <div class="docs-rename-target" id="docs-folder-create-target"></div>
-            <label class="docs-field docs-field-full">
-                <span>{{ docs_text.folder_name_label }}</span>
-                <input type="text" id="docs-folder-create-input" placeholder="{{ docs_text.folder_name_placeholder }}">
-            </label>
-            <div class="docs-rename-actions">
-                <button type="button" class="docs-btn" id="docs-folder-create-cancel-btn">{{ docs_text.cancel }}</button>
-                <button type="button" class="docs-btn docs-btn-primary" id="docs-folder-create-confirm-btn">{{ docs_text.create_button }}</button>
-            </div>
-        </div>
-    </div>
-
-{% endif %}
+{% include "popup/docs/rename_modal.html" %}
+{% include "popup/docs/folder_create_modal.html" %}
 
 {% if docs_can_manage_acl %}
-    <div id="docs-permission-modal" class="docs-rename-modal" hidden>
-        <div class="docs-rename-modal-backdrop" id="docs-permission-modal-backdrop"></div>
-        <div class="docs-rename-modal-dialog docs-permission-modal-dialog" role="dialog" aria-modal="true" aria-labelledby="docs-permission-title">
-            <h3 id="docs-permission-title" class="docs-rename-title">{{ docs_text.permission_title }}</h3>
-            <div class="docs-rename-target" id="docs-permission-target"></div>
-            <div class="docs-permission-grid">
-                <div class="docs-permission-col">
-                    <div class="docs-permission-col-title">{{ docs_text.permission_read_users }}</div>
-                    <div class="docs-permission-list" id="docs-permission-read-users-list"></div>
-                </div>
-                <div class="docs-permission-col">
-                    <div class="docs-permission-col-title">{{ docs_text.permission_read_groups }}</div>
-                    <div class="docs-permission-list" id="docs-permission-read-groups-list"></div>
-                </div>
-                <div class="docs-permission-col">
-                    <div class="docs-permission-col-title">{{ docs_text.permission_write_users }}</div>
-                    <div class="docs-permission-list" id="docs-permission-write-users-list"></div>
-                </div>
-                <div class="docs-permission-col">
-                    <div class="docs-permission-col-title">{{ docs_text.permission_write_groups }}</div>
-                    <div class="docs-permission-list" id="docs-permission-write-groups-list"></div>
-                </div>
-            </div>
-            <div class="docs-permission-help">{{ docs_text.permission_help }}</div>
-            <div class="docs-rename-actions">
-                <button type="button" class="docs-btn" id="docs-permission-cancel-btn">{{ docs_text.cancel }}</button>
-                <button type="button" class="docs-btn docs-btn-primary" id="docs-permission-save-btn">{{ docs_text.permission_save_button }}</button>
-            </div>
-        </div>
-    </div>
+    {% include "popup/docs/permission_modal.html" %}
 {% endif %}
 
-{% include "docs/_auth_logout_modal.html" %}
+{% include "popup/docs/confirm_modal.html" %}
+{% include "popup/docs/auth_logout_modal.html" %}
+{% include "popup/docs/page_help_modal.html" %}
 
 {{ docs_text|json_script:"docs-i18n" }}
 {{ initial_entries|json_script:"docs-initial-entries" }}
