--- a/templates/docs/view.html
+++ b/templates/docs/view.html
@@ -21,10 +21,14 @@
         <div class="docs-toolbar-right">
             {% include "docs/_auth_account.html" %}
             <div class="docs-toolbar-actions">
+                <button class="docs-help-icon-link" type="button" id="docs-page-help-btn" aria-label="{{ docs_text.help_button }}" title="{{ docs_text.help_button }}"><span class="docs-help-icon-symbol" aria-hidden="true"></span></button>
                 {% include "docs/_auth_button.html" %}
                 <a class="docs-btn" href="{{ docs_api_download_url }}?path={{ doc_relative_path|urlencode }}">{{ docs_text.download_button }}</a>
-                {% if docs_can_edit %}
+                {% if doc_can_edit %}
+                    <a class="docs-btn" href="{{ docs_base_url }}">{{ docs_text.list_button }}</a>
                     <a class="docs-btn" href="{{ docs_write_url }}?path={{ doc_relative_path|urlencode }}">{{ docs_text.edit_button }}</a>
+                {% endif %}
+                {% if docs_can_edit %}
                     <button class="docs-btn" type="button" id="docs-delete-btn">{{ docs_text.delete_button }}</button>
                 {% endif %}
             </div>
@@ -44,7 +48,9 @@
     <article class="docs-markdown">{{ doc_content_html }}</article>
 </main>
 
-{% include "docs/_auth_logout_modal.html" %}
+{% include "popup/docs/confirm_modal.html" %}
+{% include "popup/docs/auth_logout_modal.html" %}
+{% include "popup/docs/page_help_modal.html" %}
 
 {{ docs_text|json_script:"docs-i18n" }}
 {% include 'docs/_assets_script.html' %}
